# snowflake-etl-control-plane

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sample_bond_prices.csv  sample_bond_prices_bad.csv
src/sfetl/: __main__.py  cli.py
src/sfetl/config/: settings.py
src/sfetl/contracts/: bond_prices.py
src/sfetl/etl/: pipeline.py
src/sfetl/snowflake/: ddl.py  merge_sql.py
tests/: test_ddl.py  test_merge_sql.py
